--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==2.0.12
 cryptography==41.0.5
 defusedxml==0.8.0rc2
 Django==3.2
+django-filter==23.4
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.3.0
