--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-filter==23.4
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.3.0
+djoser==2.2.2
 idna==3.4
 iniconfig==2.0.0
 oauthlib==3.2.2
@@ -21,6 +22,7 @@ PyJWT==2.8.0
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.26.0
